Changed project structure

--- a/eve/static/eve/css/canvas.css
+++ b/eve/static/eve/css/canvas.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 5px;
+  padding: 5px; /* TODO Add correction for this in canvas.js file for precise drawing */
   box-sizing: border-box;
 }
 
