Add docker requirements

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>
-    Hello, world. You're at the Home page.
+    Hello, world! You're at the Home page.
 </h1>
 <h2>
     Check <a href="/eve"> Eve </a> out.
