--- a/eve/templates/eve/index.html
+++ b/eve/templates/eve/index.html
@@ -40,7 +40,7 @@ Your browser does not support the canvas element.
            <form action="feedback()" method="POST" id="feedback">
             {% csrf_token %}
            <input type="text" id="userSuggestion" placeholder="Enter your number">
-           <input type="submit" ng-click="myFunc()">
+               <button onclick="feedback()" ng-click="myFunc()">Submit</button>
            </form>
         </div>
       </div>
