--- a/eve/templates/eve/index.html
+++ b/eve/templates/eve/index.html
@@ -37,8 +37,7 @@ Your browser does not support the canvas element.
         <div ng-switch-when="No">
            
            <p>What did you enter.</p>
-           <form action="feedback()" method="POST" id="feedback">
-            {% csrf_token %}
+           <form id="feedback">
            <input type="text" id="userSuggestion" placeholder="Enter your number">
                <button onclick="feedback()" ng-click="myFunc()">Submit</button>
            </form>
